Human-specific FIltering Added

--- a/Pubchem_Downloader_Phase_one.ipynb
+++ b/Pubchem_Downloader_Phase_one.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1nUqLK5WqiMEJ2_o0rqC1OA5E4Fb_ets2",
-      "authorship_tag": "ABX9TyOdViUKB09ESk9tlTx53iSU",
+      "authorship_tag": "ABX9TyNWzSibSnjshQD6N+r5r01B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "6XwWfH7rG-k8"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "id": "TtC2fSrMh7FT",
         "outputId": "ff07da7a-c758-443a-d00e-15732522d88b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "TfDJr9QiHCqZ"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "nJ7j4Egg0RDv"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "lgCThy304TL8"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +194,7 @@
         "id": "wtZ9uV3471_1",
         "outputId": "40fb083d-105c-4843-dc76-3713e06cc9e9"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -329,7 +329,7 @@
         "id": "f4rQ_LG433Lr",
         "outputId": "6fa06dd6-53f2-4bcb-8f9c-eecfc85fc4c5"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +363,7 @@
         "outputId": "b7c91c0e-cc9a-4575-fa6d-39171e7a08b4",
         "collapsed": true
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +481,7 @@
       "metadata": {
         "id": "zJ39h15r9cVd"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -527,7 +527,7 @@
         },
         "outputId": "422524f8-c3d6-4f2b-b52c-9bd0d59fc65d"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +562,7 @@
         },
         "outputId": "7548fb99-348d-40d4-f99e-f7ac4b913cb7"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +658,7 @@
         },
         "outputId": "d261ddda-b7ac-4b85-8b7c-218ad24be40c"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,6 +673,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **NOTE**\n",
+        "We need to filter the targets based on the target tax id to get the only human ones which is {\"targettaxid\":9606}"
+      ],
+      "metadata": {
+        "id": "j_F0A7F2V20q"
+      }
     },
     {
       "cell_type": "markdown",
@@ -714,7 +724,7 @@
         },
         "outputId": "fdd0ed28-34a3-4a13-b0fe-374212a58136"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5757,7 +5767,7 @@
         },
         "outputId": "8d05eff7-5850-40b5-a725-b222ab86d46a"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5842,7 +5852,7 @@
         },
         "outputId": "d6f5448f-6f25-47a2-baf1-0e5c13deefe2"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15143,7 +15153,7 @@
         },
         "outputId": "b18c28bd-c627-4e0c-912d-7466a31df550"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15294,7 +15304,7 @@
         },
         "outputId": "bd342c4f-9fab-4c25-f3a9-79b90b2f0fea"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15319,7 +15329,7 @@
       "metadata": {
         "id": "Hs0ZSNj8Ekm_"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -15330,7 +15340,7 @@
       "metadata": {
         "id": "_HlKasBDveH0"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -15346,7 +15356,7 @@
         },
         "outputId": "03e1ac6f-1307-4e5c-e420-58ab3bc811ad"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15722,7 +15732,7 @@
         },
         "outputId": "20d469a7-b5fd-4c7c-a4eb-5e592d835b08"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15746,7 +15756,7 @@
         "id": "ZGQi30Z7viG9",
         "outputId": "5185b451-0426-4204-d1c6-4089840f8143"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15776,7 +15786,7 @@
         },
         "outputId": "8a96ab4e-a1ba-496e-af70-cb7ec62eaf72"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15806,7 +15816,7 @@
         },
         "outputId": "4da05729-a6f2-487a-dbae-3c7c131bc5a2"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15847,7 +15857,7 @@
         },
         "outputId": "93045b16-9ad3-465d-8b7c-5425785cfe52"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -16059,7 +16069,7 @@
         "id": "EZp-2e6I2eb3",
         "outputId": "1229bed8-8094-4405-b7e7-c964ff9bacee"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -16093,7 +16103,7 @@
       "metadata": {
         "id": "Maffi1GD2lFg"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -16144,7 +16154,7 @@
         },
         "outputId": "9c13a07d-678b-4a03-d13c-d7bdb07a47b3"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -16249,7 +16259,7 @@
         },
         "outputId": "0ef3b98b-3b6c-4517-a56d-dc8f56836ca6"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -16288,7 +16298,7 @@
         "id": "Dgl8fsrAprV1",
         "outputId": "abe01021-16bc-4885-953e-043d78b109b1"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -16750,7 +16760,7 @@
       "metadata": {
         "id": "9VanpnETzrVC"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -16767,7 +16777,7 @@
         "id": "mTHBYDwMqnnS",
         "outputId": "0a2eefc5-aa0a-44f5-cd67-b22e3fe28c4e"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -21786,7 +21796,7 @@
       "metadata": {
         "id": "QersoTMQ7EVu"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -21802,7 +21812,7 @@
           "height": 580
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
