COde for Human target filter added

--- a/Pubchem_Downloader_Phase_one.ipynb
+++ b/Pubchem_Downloader_Phase_one.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1nUqLK5WqiMEJ2_o0rqC1OA5E4Fb_ets2",
-      "authorship_tag": "ABX9TyNWzSibSnjshQD6N+r5r01B",
+      "authorship_tag": "ABX9TyOpGWLai30rxgEK7abbrvIF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -683,6 +683,34 @@
       "metadata": {
         "id": "j_F0A7F2V20q"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Folder containing the CSV files\n",
+        "folder_path = '/content/drive/MyDrive/IDS_Target_Result'\n",
+        "\n",
+        "for file in os.listdir(folder_path):\n",
+        "    if file.endswith('.csv'):\n",
+        "        file_path = os.path.join(folder_path, file)\n",
+        "\n",
+        "        # Read CSV and clean up column names (strip spaces to prevent key errors)\n",
+        "        df = pd.read_csv(file_path)\n",
+        "        df.columns = df.columns.str.strip()  # Ensures column names are correctly formatted\n",
+        "\n",
+        "        # Filter rows where targettaxid is 9606 (Homo sapiens)\n",
+        "        df = df[df['targettaxid'] == 9606]\n",
+        "\n",
+        "        # Override the same CSV file\n",
+        "        df.to_csv(file_path, index=False)\n",
+        "\n",
+        "        print(f\"Filtered and updated: {file_path}\")\n"
+      ],
+      "metadata": {
+        "id": "F4676K1kWu0g"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
