--- a/Visualization_and_Alignment.ipynb
+++ b/Visualization_and_Alignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhaC9MwSPQYHK4f4Q/5rfw",
+      "authorship_tag": "ABX9TyPrQ2QgTurIHr/y7xXs47A9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,11 +48,11 @@
         "import json"
       ],
       "metadata": {
-        "id": "9iTQxSUzt1rB",
-        "outputId": "d8a1feb6-29f0-4e2c-ec87-d257ee085eea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9iTQxSUzt1rB",
+        "outputId": "d8a1feb6-29f0-4e2c-ec87-d257ee085eea"
       },
       "execution_count": 5,
       "outputs": [
@@ -3039,10 +3039,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Color-Coded Alignment Quality:\n",
+        "\n",
+        "  - Green: Well aligned\n",
+        "  - Yellow: Moderately aligned\n",
+        "  - Magenta: Weakly aligned\n",
+        "  - Red: Poorly aligned"
+      ],
+      "metadata": {
+        "id": "LvN_yH5fvOPZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "tiiD_it5uwRQ"
+        "id": "RK-gvevTvTFh"
       },
       "execution_count": null,
       "outputs": []
