--- a/Pubchem_Downloader_Phase_one.ipynb
+++ b/Pubchem_Downloader_Phase_one.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1nUqLK5WqiMEJ2_o0rqC1OA5E4Fb_ets2",
-      "authorship_tag": "ABX9TyMYRuFlx9E7HUsiPjO9IgYu",
+      "authorship_tag": "ABX9TyNK2SKhLd6qW6nxmf6KrApk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "6XwWfH7rG-k8"
       },
-      "execution_count": 35,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -50,15 +50,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TtC2fSrMh7FT",
-        "outputId": "fa1440f6-4615-4663-b666-7a77daf8c15a"
+        "outputId": "8ddbbacb-7c74-4116-d92c-a71ea3e31ce3"
       },
-      "execution_count": 36,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "TfDJr9QiHCqZ"
       },
-      "execution_count": 37,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "nJ7j4Egg0RDv"
       },
-      "execution_count": 38,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -177,14 +177,16 @@
       "metadata": {
         "id": "lgCThy304TL8"
       },
-      "execution_count": 39,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#access to the pubchem_cid column\n",
-        "df['pubchem_cid']"
+        "#df['clinical_phase']\n",
+        "#df['pubchem_cid']\n",
+        "df['target']"
       ],
       "metadata": {
         "colab": {
@@ -192,26 +194,26 @@
           "height": 459
         },
         "id": "wtZ9uV3471_1",
-        "outputId": "bf549e30-fc4d-49f1-e4c2-0ab147d88c95"
+        "outputId": "8d1997d7-0b57-49dc-8319-dd97c3e046b6"
       },
-      "execution_count": 40,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0      5330175.0\n",
-              "1      5311340.0\n",
-              "2     11511120.0\n",
-              "3       221354.0\n",
-              "4      6806409.0\n",
-              "         ...    \n",
-              "60     9829836.0\n",
-              "61    51031035.0\n",
-              "62      452192.0\n",
-              "63       30323.0\n",
-              "64    11785878.0\n",
-              "Name: pubchem_cid, Length: 63, dtype: float64"
+              "0                   SRC\n",
+              "1                 OPRL1\n",
+              "2      EGFR|ERBB2|ERBB4\n",
+              "3                  CCR1\n",
+              "4            TP53|USP14\n",
+              "            ...        \n",
+              "60    ADRB1|ADRB2|ADRB3\n",
+              "61            RAC1|RAC3\n",
+              "62                HIF1A\n",
+              "63          TOP2A|TOP2B\n",
+              "64                  LCK\n",
+              "Name: target, Length: 63, dtype: object"
             ],
             "text/html": [
               "<div>\n",
@@ -232,29 +234,29 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>pubchem_cid</th>\n",
+              "      <th>target</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>5330175.0</td>\n",
+              "      <td>SRC</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>5311340.0</td>\n",
+              "      <td>OPRL1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>11511120.0</td>\n",
+              "      <td>EGFR|ERBB2|ERBB4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>221354.0</td>\n",
+              "      <td>CCR1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>6806409.0</td>\n",
+              "      <td>TP53|USP14</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -262,32 +264,32 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>60</th>\n",
-              "      <td>9829836.0</td>\n",
+              "      <td>ADRB1|ADRB2|ADRB3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>61</th>\n",
-              "      <td>51031035.0</td>\n",
+              "      <td>RAC1|RAC3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>62</th>\n",
-              "      <td>452192.0</td>\n",
+              "      <td>HIF1A</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>63</th>\n",
-              "      <td>30323.0</td>\n",
+              "      <td>TOP2A|TOP2B</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>64</th>\n",
-              "      <td>11785878.0</td>\n",
+              "      <td>LCK</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "<p>63 rows × 1 columns</p>\n",
-              "</div><br><label><b>dtype:</b> float64</label>"
+              "</div><br><label><b>dtype:</b> object</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 9
         }
       ]
     },
@@ -323,7 +325,7 @@
         "id": "f4rQ_LG433Lr",
         "outputId": "c3a94611-3bec-4f51-b441-2160590215bd"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +359,7 @@
         "outputId": "e8e6bbb6-d7e5-46eb-da4e-f5b388d9cc30",
         "collapsed": true
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +476,7 @@
       "metadata": {
         "id": "zJ39h15r9cVd"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -520,7 +522,7 @@
         },
         "outputId": "33eb5edc-12a9-4a76-f160-9b1aa35d6796"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +553,7 @@
         },
         "outputId": "719a8d86-c182-4ecd-e2e0-433e1ff37626"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,7 +649,7 @@
         },
         "outputId": "9313e17c-7653-41b5-c294-63ddd9ad0457"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +717,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,7 +865,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +918,7 @@
         },
         "outputId": "5e820edc-28c6-49dc-8488-031febcc3979"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5959,7 +5961,7 @@
         },
         "outputId": "f4172ce9-84d2-44f8-c417-9516a1631997"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6044,7 +6046,7 @@
         },
         "outputId": "f788dc13-ad1c-4ec5-8be9-82e8aa6e0af1"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13654,7 +13656,7 @@
         },
         "outputId": "a7f64f2d-e523-4f59-a2d7-2f97f3180d54"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13776,7 +13778,7 @@
       "metadata": {
         "id": "kCBnAvqT7F-c"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13788,7 +13790,7 @@
       "metadata": {
         "id": "Hs0ZSNj8Ekm_"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13799,7 +13801,7 @@
       "metadata": {
         "id": "_HlKasBDveH0"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13815,7 +13817,7 @@
         },
         "outputId": "8630b90d-489d-466b-df07-dcfbc7a8112e"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14191,7 +14193,7 @@
         },
         "outputId": "e69fb6a4-ef3c-4fdc-ce1b-b30ca50aca34"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14215,7 +14217,7 @@
         "id": "ZGQi30Z7viG9",
         "outputId": "60094143-ff74-4ed1-e65c-6aed0e16ab24"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14245,7 +14247,7 @@
         },
         "outputId": "d5787388-948c-41b2-cf4f-aaa354433fb9"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14275,7 +14277,7 @@
         },
         "outputId": "cb5cb65a-7380-4ec5-8076-319d39f7e11e"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14316,7 +14318,7 @@
         },
         "outputId": "d54b16d1-548e-4627-f9d4-e2993832aab5"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14673,7 +14675,7 @@
       "metadata": {
         "id": "ysok5brMpEJr"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14748,7 +14750,7 @@
         "id": "Dgl8fsrAprV1",
         "outputId": "8e08f568-3b37-4982-d9cd-f825a874f143"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15210,7 +15212,7 @@
       "metadata": {
         "id": "9VanpnETzrVC"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -15227,7 +15229,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -20246,7 +20248,7 @@
       "metadata": {
         "id": "QersoTMQ7EVu"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -20262,7 +20264,7 @@
           "height": 424
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
