--- a/Pubchem_Downloader_Phase_one.ipynb
+++ b/Pubchem_Downloader_Phase_one.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1nUqLK5WqiMEJ2_o0rqC1OA5E4Fb_ets2",
-      "authorship_tag": "ABX9TyNK2SKhLd6qW6nxmf6KrApk",
+      "authorship_tag": "ABX9TyOxwqSVCHC7XuymxfiWR9za",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,9 +184,10 @@
       "cell_type": "code",
       "source": [
         "#access to the pubchem_cid column\n",
-        "#df['clinical_phase']\n",
-        "#df['pubchem_cid']\n",
-        "df['target']"
+        "#df['clinical_phase'] # focus on those that are Launched\n",
+        "#df['target'] # ask if we need only these or should we add more\n",
+        "#df['pert_iname.1'] # focus on those that has a commercial name\n",
+        "df['pubchem_cid']"
       ],
       "metadata": {
         "colab": {
@@ -194,26 +195,26 @@
           "height": 459
         },
         "id": "wtZ9uV3471_1",
-        "outputId": "8d1997d7-0b57-49dc-8319-dd97c3e046b6"
+        "outputId": "c125e474-dd85-4cbc-ee5b-66c0b3dc4495"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0                   SRC\n",
-              "1                 OPRL1\n",
-              "2      EGFR|ERBB2|ERBB4\n",
-              "3                  CCR1\n",
-              "4            TP53|USP14\n",
-              "            ...        \n",
-              "60    ADRB1|ADRB2|ADRB3\n",
-              "61            RAC1|RAC3\n",
-              "62                HIF1A\n",
-              "63          TOP2A|TOP2B\n",
-              "64                  LCK\n",
-              "Name: target, Length: 63, dtype: object"
+              "0      5330175.0\n",
+              "1      5311340.0\n",
+              "2     11511120.0\n",
+              "3       221354.0\n",
+              "4      6806409.0\n",
+              "         ...    \n",
+              "60     9829836.0\n",
+              "61    51031035.0\n",
+              "62      452192.0\n",
+              "63       30323.0\n",
+              "64    11785878.0\n",
+              "Name: pubchem_cid, Length: 63, dtype: float64"
             ],
             "text/html": [
               "<div>\n",
@@ -234,29 +235,29 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>target</th>\n",
+              "      <th>pubchem_cid</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>SRC</td>\n",
+              "      <td>5330175.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>OPRL1</td>\n",
+              "      <td>5311340.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>EGFR|ERBB2|ERBB4</td>\n",
+              "      <td>11511120.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>CCR1</td>\n",
+              "      <td>221354.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>TP53|USP14</td>\n",
+              "      <td>6806409.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -264,32 +265,32 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>60</th>\n",
-              "      <td>ADRB1|ADRB2|ADRB3</td>\n",
+              "      <td>9829836.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>61</th>\n",
-              "      <td>RAC1|RAC3</td>\n",
+              "      <td>51031035.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>62</th>\n",
-              "      <td>HIF1A</td>\n",
+              "      <td>452192.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>63</th>\n",
-              "      <td>TOP2A|TOP2B</td>\n",
+              "      <td>30323.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>64</th>\n",
-              "      <td>LCK</td>\n",
+              "      <td>11785878.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "<p>63 rows × 1 columns</p>\n",
-              "</div><br><label><b>dtype:</b> object</label>"
+              "</div><br><label><b>dtype:</b> float64</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 11
         }
       ]
     },
