--- a/Pubchem_Downloader_Phase_one.ipynb
+++ b/Pubchem_Downloader_Phase_one.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1nUqLK5WqiMEJ2_o0rqC1OA5E4Fb_ets2",
-      "authorship_tag": "ABX9TyOxwqSVCHC7XuymxfiWR9za",
+      "authorship_tag": "ABX9TyN6FbL13BvKKKNhavxHx6Lm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "6XwWfH7rG-k8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "id": "TtC2fSrMh7FT",
         "outputId": "8ddbbacb-7c74-4116-d92c-a71ea3e31ce3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "TfDJr9QiHCqZ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "nJ7j4Egg0RDv"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "lgCThy304TL8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
         "id": "wtZ9uV3471_1",
         "outputId": "c125e474-dd85-4cbc-ee5b-66c0b3dc4495"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -20860,6 +20860,48 @@
       "metadata": {
         "id": "Ano9czvSUOL6"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#✅put all the targets from interaction and pathways file together:\n",
+        "- after we downloaded the whole thing, we will add them to one big csv file so we can go through them and download\n"
+      ],
+      "metadata": {
+        "id": "P-KZ0gOd6OPK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# We are combining all interaction and pathway files along with PubChem IDs and other relevant information, we will also focus on using the target PDB ID for further processing.\n",
+        "Interaction_folder_path = '/content/drive/MyDrive/IDS_Target_Result_Interaction'\n",
+        "\n",
+        "# 🔄 Combine all CSV files into one DataFrame\n",
+        "combined_df = pd.DataFrame()\n",
+        "\n",
+        "for filename in os.listdir(Interaction_folder_path):\n",
+        "    if filename.endswith(\".csv\"):\n",
+        "        file_path = os.path.join(Interaction_folder_path, filename)\n",
+        "        df = pd.read_csv(file_path)\n",
+        "        df['source_file'] = filename  # Optional: keep track of original source\n",
+        "        combined_df = pd.concat([combined_df, df], ignore_index=True)\n",
+        "\n",
+        "# ➕ Add pubchem_id by removing '.csv' and converting to integer\n",
+        "combined_df['pubchem_id'] = combined_df['source_file'].str.replace('.csv', '', regex=False).astype(int)\n",
+        "\n",
+        "# 💾 Save the combined DataFrame to a new CSV\n",
+        "output_path = os.path.join(Interaction_folder_path, 'combined_targets.csv')\n",
+        "combined_df.to_csv(output_path, index=False)\n",
+        "\n",
+        "print(f\"✅ Combined CSV saved to: {output_path}\")"
+      ],
+      "metadata": {
+        "id": "pEMHu2wa6Luc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
