--- a/Pubchem_Downloader_Phase_one.ipynb
+++ b/Pubchem_Downloader_Phase_one.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1nUqLK5WqiMEJ2_o0rqC1OA5E4Fb_ets2",
-      "authorship_tag": "ABX9TyN6FbL13BvKKKNhavxHx6Lm",
+      "authorship_tag": "ABX9TyOMMzvTSD/t1dklziL27Lki",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "6XwWfH7rG-k8"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -50,15 +50,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TtC2fSrMh7FT",
-        "outputId": "8ddbbacb-7c74-4116-d92c-a71ea3e31ce3"
+        "outputId": "269599dc-0c65-494b-813d-325ffe8966e0"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "TfDJr9QiHCqZ"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -157,14 +157,14 @@
     {
       "cell_type": "code",
       "source": [
-        "file_path = '/content/drive/MyDrive/cdot_actives_50 1.xlsx'\n",
+        "file_path = '/content/drive/MyDrive/Drug Repurposing Project/cdot_actives_50.xlsx'\n",
         "\n",
         "df = pd.read_excel(file_path)"
       ],
       "metadata": {
         "id": "nJ7j4Egg0RDv"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "lgCThy304TL8"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -192,12 +192,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 459
+          "height": 458
         },
         "id": "wtZ9uV3471_1",
-        "outputId": "c125e474-dd85-4cbc-ee5b-66c0b3dc4495"
+        "outputId": "48eab051-0f4e-4400-a3de-5dccdcb82309"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -290,7 +290,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 22
         }
       ]
     },
@@ -324,9 +324,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f4rQ_LG433Lr",
-        "outputId": "c3a94611-3bec-4f51-b441-2160590215bd"
+        "outputId": "8e3f1828-c870-4c02-bd55-c7b35781eb8b"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,10 +357,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8e6bbb6-d7e5-46eb-da4e-f5b388d9cc30",
+        "outputId": "c08521d1-0aec-4084-d81e-2f7103c89acf",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,8 +681,8 @@
       "cell_type": "code",
       "source": [
         "# Folder containing the CSV files\n",
-        "folder_path = '/content/drive/MyDrive/IDS_Target_Result'\n",
-        "folder_path_interaction = '/content/drive/MyDrive/Human_Targets'\n",
+        "folder_path = '/content/drive/MyDrive/Drug Repurposing Project/Interactions_Results'\n",
+        "folder_path_interaction = '/content/drive/MyDrive/Drug Repurposing Project/Human_Interaction_Targets'\n",
         "\n",
         "# Create the target folder if it doesn't exist\n",
         "os.makedirs(folder_path_interaction, exist_ok=True)\n",
@@ -712,147 +712,10 @@
         "          print(f\"Filtered and saved: {interaction_file_path}\")\n"
       ],
       "metadata": {
-        "id": "F4676K1kWu0g",
-        "outputId": "a747fea5-264c-49de-f6d8-f7e5ca965873",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "F4676K1kWu0g"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/5330175.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/5330175.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/5311340.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/5311340.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/11511120.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/11511120.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/6806409.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/6806409.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/221354.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/221354.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/5329480.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/5329480.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/444810.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/444810.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/12947.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/12947.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/135421339.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/135421339.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/9939609.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/9939609.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/42627755.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/42627755.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/53464483.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/53464483.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/9810709.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/9810709.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/3647519.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/3647519.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/6413301.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/6413301.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/119081415.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/119081415.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/5311382.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/5311382.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/53315868.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/53315868.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/10219.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/10219.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/9914412.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/9914412.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/2993.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/2993.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/24756910.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/24756910.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/6918097.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/6918097.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/4534086.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/4534086.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/73416445.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/73416445.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/132928.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/132928.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/5281035.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/5281035.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/121750.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/121750.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/9852185.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/9852185.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/51000408.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/51000408.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/73602827.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/73602827.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/9809926.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/9809926.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/41867.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/41867.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/6918837.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/6918837.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/24858111.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/24858111.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/33630.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/33630.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/2798.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/2798.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/441074.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/441074.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/4735.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/4735.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/3034034.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/3034034.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/676352.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/676352.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/49855250.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/49855250.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/154257.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/154257.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/24795070.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/24795070.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/11978790.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/11978790.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/439530.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/439530.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/6445562.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/6445562.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/9829526.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/9829526.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/5583.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/5583.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/446536.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/446536.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/46848036.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/46848036.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/9549305.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/9549305.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/25150857.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/25150857.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/53315882.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/53315882.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/6197.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/6197.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/51358113.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/51358113.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/16007391.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/16007391.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/9829836.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/9829836.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/51031035.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/51031035.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/452192.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/452192.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/30323.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/30323.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/11785878.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/11785878.csv\n",
-            "Original saved: /content/drive/MyDrive/IDS_Target_Result/3499.csv\n",
-            "Filtered and saved: /content/drive/MyDrive/Human_Targets/3499.csv\n"
-          ]
-        }
-      ]
+      "execution_count": 15,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -861,18 +724,18 @@
       ],
       "metadata": {
         "id": "n2Wmz0HR2uBT",
-        "outputId": "1f8ec015-621c-4b16-8d9e-c58d1e802b6d",
+        "outputId": "461712d5-dcf7-4e3e-d3dc-3d939b1c86ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[]\n"
+            "['5330175.csv', '5311340.csv', '11511120.csv', '221354.csv', '6806409.csv', '5329480.csv', '12947.csv', '444810.csv', '135421339.csv', '9939609.csv', '42627755.csv', '53464483.csv', '3647519.csv', '9810709.csv', '6413301.csv', '119081415.csv', '5311382.csv', '53315868.csv', '10219.csv', '9914412.csv', '2993.csv', '24756910.csv', '6918097.csv', '4534086.csv', '73416445.csv', '132928.csv', '5281035.csv', '121750.csv', '9852185.csv', '51000408.csv', '73602827.csv', '3499.csv', '9809926.csv', '41867.csv', '6918837.csv', '24858111.csv', '33630.csv', '2798.csv', '441074.csv', '4735.csv', '3034034.csv', '676352.csv', '49855250.csv', '154257.csv', '24795070.csv', '11978790.csv', '439530.csv', '6445562.csv', '9829526.csv', '5583.csv', '446536.csv', '46848036.csv', '9549305.csv', '25150857.csv', '53315882.csv', '6197.csv', '51358113.csv', '16007391.csv', '9829836.csv', '51031035.csv', '452192.csv', '30323.csv', '11785878.csv']\n"
           ]
         }
       ]
